components/app/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app
spec:
  revisionHistoryLimit: 3
  replicas: 1
  strategy:
    type: RollingUpdate
  template:
    spec:
      containers:
        - name: app
          image: "ghcr.io/alexta69/metube:latest"
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8081
              protocol: TCP
          volumeMounts:
            - name: downloads
              mountPath: /downloads
            - name: nfs-downloads
              mountPath: /downloads/nfs
      volumes:
        - name: downloads
          persistentVolumeClaim:
            claimName: downloads-pvc
        - name: nfs-downloads
          hostPath:
            path: /media/ytdlp-downloads
            type: Directory
